Added SU Logo to GamePage.xam

--- a/Mine/Mine/Views/Game/GamePage.xaml
+++ b/Mine/Mine/Views/Game/GamePage.xaml
@@ -9,6 +9,10 @@
             
             <Label Text="Welcome to my Homework!"
                    FontSize="Large"/>
-           </StackLayout>
+            <Image
+                Source="https://upload.wikimedia.org/wikipedia/commons/thumb/2/24/Seattle_Redhawks_logo.svg/914px-Seattle_Redhawks_logo.svg.png"
+                WidthRequest="200"
+                HeightRequest="200" />
+        </StackLayout>
     </ContentPage.Content>
 </ContentPage>
