--- a/Mine/Mine/Views/Items/ItemReadPage.xaml
+++ b/Mine/Mine/Views/Items/ItemReadPage.xaml
@@ -8,8 +8,8 @@
              Title="{Binding Title}">
 
     <ContentPage.ToolbarItems>
-        <ToolbarItem Text="Delete" Clicked="DeleteItem_Clicked" />
-        <ToolbarItem Text="Update" Clicked="UpdateItem_Clicked" />
+        <ToolbarItem Text="Delete" Clicked="DeleteItem_Clicked" IconImageSource="icon_delete.png" />
+        <ToolbarItem Text="Update" Clicked="UpdateItem_Clicked"  />
     </ContentPage.ToolbarItems>
     
     <StackLayout Spacing="20" Padding="15">
