--- a/Mine/Mine/Views/Items/ItemReadPage.xaml
+++ b/Mine/Mine/Views/Items/ItemReadPage.xaml
@@ -9,7 +9,7 @@
 
     <ContentPage.ToolbarItems>
         <ToolbarItem Text="Delete" Clicked="DeleteItem_Clicked" IconImageSource="icon_delete.png" />
-        <ToolbarItem Text="Update" Clicked="UpdateItem_Clicked"  />
+        <ToolbarItem Text="Update" Clicked="UpdateItem_Clicked" IconImageSource="icon_update.png"/>
     </ContentPage.ToolbarItems>
     
     <StackLayout Spacing="20" Padding="15">
