--- a/Mine/Mine/Views/Items/ItemUpdatePage.xaml
+++ b/Mine/Mine/Views/Items/ItemUpdatePage.xaml
@@ -8,7 +8,7 @@
              Title="New Item">
     
     <ContentPage.ToolbarItems>
-        <ToolbarItem Text="Cancel" Clicked="Cancel_Clicked" />
+        <ToolbarItem Text="Cancel" Clicked="Cancel_Clicked" IconImageSource="icon_cancel.png"/>
         <ToolbarItem Text="Save" Clicked="Save_Clicked" />
     </ContentPage.ToolbarItems>
 
