--- a/Mine/Mine/Views/Items/ItemUpdatePage.xaml
+++ b/Mine/Mine/Views/Items/ItemUpdatePage.xaml
@@ -28,7 +28,7 @@
             <Label Text="Value" FontSize="Medium" />
             <StackLayout
                 Orientation="Horizontal">
-                <Stepper Value="{Binding Data.Value, Mode=TwoWay}"
+                <Stepper Value="{Binding Item.Value, Mode=TwoWay}"
                         Minimum="0"
                         Maximum="10"
                         Increment="1"
